# Technathon

HackForSportHackathon/: README.md  build.gradle  my-release-key.keystore
HackForSportHackathon/app/: build.gradle  google-services.json
HackForSportHackathon/app/src/main/: AndroidManifest.xml
HackForSportHackathon/app/src/main/java/com/example/health/: AIFragment.kt  ChatFragment.kt  ExcersiceFragment.kt  MainActivity.kt  SignInActivity.kt
HackForSportHackathon/app/src/main/res/drawable/: background.xml  baseline_air_24.xml  baseline_data_saver_off_24.xml  baseline_logout_24.xml  baseline_nights_stay_24.xml  baseline_upload_24.xml  baseline_verified_24.xml  btn_stop.xml  button_start.xml  ic_calorie.xml  ic_run_24.xml  step_bg.xml
HackForSportHackathon/app/src/main/res/layout/: activity_selction_.xml  activity_sign_in.xml  fragment_a_i.xml  fragment_chat.xml  fragment_excersice.xml  item_message.xml
HackForSportHackathon/app/src/main/res/menu/: overflow_menu.xml
HackForSportHackathon/app/src/main/res/values/: colors.xml  themes.xml
HackForSportHackathon/gradle/wrapper/: gradle-wrapper.properties
embed/embed-graphics/: Cargo.toml
embed/embed-graphics/.cargo/: config.toml
embed/embed-graphics/examples/: demo-analog-clock.rs  f413disco-lcd-ferris.rs
embed/embedded_workshop_2021/c_01_hello_stm32/hello_stm32/: Cargo.toml  memory.x
embed/embedded_workshop_2021/c_01_hello_stm32/hello_stm32/src/: main.rs
embed/stm32f4xx-hal/: Cargo.toml  memory.x
embed/validating-lightning-signer/vls-signer-stm32/src/: device.rs
herokuapihealth/: requirements.txt
